<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="AddmissionPrice">Admission Price</string>
    <string name="AmountFood">Food Cost</string>
    <string name="AmountAddmission">Adm. Costs?</string>
    <string name="app_name">MyWeekend</string>
    <string name="button_send">Hello world!</string>
    <string name="Catagories">Catagories</string>
    <string name="CreateNewEvent">Create New Event</string>
    <string name="desc">Description…\n\n\n\n\n\n\n\n\n\n\n\n\n...</string>
    <string name="Email">Email</string>
    <string name="event">Event Name</string>
    <string name="event_button">@string/event</string>
    <string name="EventDate">Date (MM/DD/YY)</string>
    <string name="EventLocation">Location</string>
    <string name="EventTitle">Event Title</string>
    <string name="EventTime">Time (HH:MM am/pm)</string>
    <string name="fin">I did something</string>
    <string name="FoodQuerie">Food?</string>
    <string name="hello_world">Hello world!</string>
    <string name="location">Location</string>
    <string name="oK">OK</string>
    <string name="optimism">Prepare to live a more full and adventurous life.</string>
    <string name="pathway">pathway</string>
    <string name="password">Create Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="PointContact">Point of Contact</string>
    <string name="name">Name</string>
    <string name="startAdventure">Start Your Adventure</string>
    <string name="time">time and date</string>
    <string name="zip">Zip code of Primary Residence</string>


    <string name="cat0">Auto, Boat &amp; Air</string>
    <string name="cat1">Business &amp; Professional</string>
    <string name="cat2">Charity &amp; Causes</string>
    <string name="cat3">Family &amp; Education</string>
    <string name="cat4">Fashion &amp; Beauty</string>
    <string name="cat5">Film, Media &amp; Entertainment</string>
    <string name="cat6">Food Served?</string>
    <string name="cat7">Food Drink</string>
    <string name="cat8">Government &amp; Politics</string>
    <string name="cat9">Health &amp; Wellness</string>
    <string name="cat10">Hobbies &amp; Special Interest</string>
    <string name="cat11">Home &amp; Lifestyle</string>
    <string name="cat12">Music</string>
    <string name="cat13">Other</string>
    <string name="cat14">Performing &amp; Visual Arts</string>
    <string name="cat15">Religion &amp; Spirituality</string>
    <string name="cat16">Science &amp; Technology</string>
    <string name="cat17">Seasonal &amp; Holiday</string>
    <string name="cat18">Sports and Fitness</string>
    <string name="cat19">Admission Costs?</string>
    <string name="cat20">Travel &amp; Outdoor</string>

    <string name="direct1">Search</string>
    <string name="direct2">Today</string>
    <string name="direct3">Your Weekend</string>
    <string name="direct4">Step Out of Your Box</string>
    <string name="direct5">Recommended</string>
    <string name="direct6">Popular</string>
    <string name="direct7">All Events</string>

    <string name="eventURL">Event URL</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="ZipCode">Zip Code</string>
    <string name="Costs">Costs</string>
    <string name="Required">*</string>
    <string name="fillInRequired">Please fill in required feilds(*)</string>
    <string name="EventSearch">Event Search</string>
    <string name="SizeOfParty">Size of party</string>
    <string name="Budget">Budget</string>
    <string name="Hungry">Hungry?</string>

    <string-array name="booleans">
        <item>@string/cat0</item>
        <item>@string/cat1</item>
        <item>@string/cat2</item>
        <item>@string/cat3</item>
        <item>@string/cat4</item>
        <item>@string/cat5</item>
        <item>@string/cat6</item>
        <item>@string/cat7</item>
        <item>@string/cat8</item>
        <item>@string/cat9</item>
        <item>@string/cat10</item>
        <item>@string/cat11</item>
        <item>@string/cat12</item>
        <item>@string/cat13</item>
        <item>@string/cat14</item>
        <item>@string/cat15</item>
        <item>@string/cat16</item>
        <item>@string/cat17</item>
        <item>@string/cat18</item>
        <item>@string/cat19</item>
        <item>@string/cat20</item>
    </string-array>

    <string-array name="sort">
        <item>@string/direct1</item>
        <item>@string/direct2</item>
        <item>@string/direct3</item>
        <item>@string/direct4</item>
        <item>@string/direct5</item>
        <item>@string/direct6</item>
        <item>@string/direct7</item>
        <item>@string/cat0</item>
        <item>@string/cat1</item>
        <item>@string/cat2</item>
        <item>@string/cat3</item>
        <item>@string/cat4</item>
        <item>@string/cat5</item>
        <item>@string/cat6</item>
        <item>@string/cat7</item>
        <item>@string/cat8</item>
        <item>@string/cat9</item>
        <item>@string/cat10</item>
        <item>@string/cat11</item>
        <item>@string/cat12</item>
        <item>@string/cat13</item>
        <item>@string/cat14</item>
        <item>@string/cat15</item>
        <item>@string/cat16</item>
        <item>@string/cat17</item>
        <item>@string/cat18</item>
        <item>@string/cat19</item>
        <item>@string/cat20</item>
    </string-array>

</resources>
